---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
2:9 error:Cannot initialize with a procedure
